# pegasus_capture_firmware

gatt_server/: sdkconfig
gatt_server/main/: CMakeLists.txt  driver_max30102_interface_esp32.c  gatts.c  gatts.h  gatts_demo.c  main.c  max30102_interface_esp32.h
gatt_server/max30102-main/example/: driver_max30102_fifo.c  driver_max30102_fifo.h
